# Pebble-Web

./: .env.example  Cargo.toml  Dockerfile  README.md  README_EN.md  docker-compose.yml
.github/workflows/: ci.yml
crates/pebble-core/src/: types.rs
crates/pebble-crypto/src/: keystore.rs  lib.rs
crates/pebble-mail/: Cargo.toml
crates/pebble-mail/src/: gmail_sync.rs  imap.rs  lib.rs  outlook_sync.rs  realtime_policy.rs  sync.rs
crates/pebble-mail/src/provider/: gmail.rs  outlook.rs
crates/pebble-oauth/src/: lib.rs
crates/pebble-push/: Cargo.toml
crates/pebble-push/src/: client.rs  config.rs  lib.rs  payload.rs  token.rs  types.rs
crates/pebble-push/tests/: magicpush.rs
crates/pebble-rules/: Cargo.toml
crates/pebble-rules/src/: cancel.rs  executor.rs  lib.rs  matcher.rs  model.rs  runner.rs
crates/pebble-search/src/: lib.rs
crates/pebble-store/: Cargo.toml
crates/pebble-store/src/: accounts.rs  app_settings.rs  attachments.rs  cloud_sync.rs  contacts.rs  folders.rs  kanban.rs  lib.rs  magicpush_config.rs  rules.rs  (+6 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api-client.ts  main.tsx
scripts/: deploy.sh
src/: config.rs  credentials.rs  error.rs  magicpush.rs  magicpush_tests.rs  main.rs  state.rs  sync.rs  ws.rs
src/routes/: accounts.rs  attachments.rs  cloud_sync.rs  compose.rs  contacts.rs  drafts.rs  folders.rs  health.rs  kanban.rs  labels.rs  magicpush.rs  messages.rs  mod.rs  oauth.rs  rules.rs  search.rs  settings.rs  snooze.rs  sync.rs  threads.rs  translate.rs  trusted_senders.rs
(+111 files in other folders)
