[package]
name = "pebble-push"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
axum = "0.8"
serde_json = { workspace = true }
tokio = { workspace = true }
